[package]
name = "envsh"
version = "0.1.4"
authors = ["Jessica Rodriguez <dev@jessicarod.com>"]
categories = ["command-line-utilities"]
edition = "2021"
homepage = "https://github.com/jessicarod7/envsh"
exclude = [".idea/*"]
license = "MIT"
repository = "https://github.com/jessicarod7/envsh"
readme = "README.md"
description = "send and shorten stuff with envs.sh"

[dependencies]
clap = { version = "4.5.28", features = ["derive", "error-context"] }
jiff = { version = "0.1.29"}
reqwest = { version = "0.12.12", features = ["multipart", "blocking"] }