[package]
name = "envsh"
version = "0.2.3"
authors = ["Jessica Rodriguez <dev@jessicarod.com>"]
categories = ["command-line-utilities"]
edition = "2024"
homepage = "https://github.com/jessicarod7/envsh"
exclude = [".idea/*"]
license = "MIT"
repository = "https://github.com/jessicarod7/envsh"
readme = "README.md"
description = "send and shorten stuff with envs.sh"

[dependencies]
clap = { version = "4.5.49", features = ["derive", "error-context"] }
clap_complete = "4.5.59"
jiff = { version = "0.2.15" }
reqwest = { version = "0.12.24", features = ["multipart", "blocking"] }